--- a/src/view/recorder.css
+++ b/src/view/recorder.css
@@ -268,9 +268,13 @@
                   p {
                     font-weight: bold;
                   }
+                  .resize-handle {
+                    opacity: 1;
+                  }
                 }
                 &.active {
                   border-color: var(--ranged-track-border-active);
+                  cursor: grab;
                 }
                 p {
                   position: absolute;
@@ -294,6 +298,24 @@
                   /*     font-size: 0.9rem; */
                   /*   } */
                   /* } */
+                }
+                .resize-handle {
+                  opacity: 0;
+                  position: absolute;
+                  left: 3.5px;
+                  bottom: -24px;
+                  font-size: 16px;
+                  text-shadow: 0 0 2px var(--editor-track-resize-handle-shadow);
+                  color: var(--editor-track-resize-handle-color);
+                  font-weight: 100;
+                  transform: rotate(-90deg);
+                  transform-origin: center left;
+                  transition: opacity 0.1s ease-out;
+                  cursor: s-resize;
+
+                  &:hover {
+                    /* transform: rotate(-90deg) translate(-5px, 0); */
+                  }
                 }
               }
             }
